Revert dependencies to working state

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           context: ./
           tags: |
-            matteocastellucci3/nodeapp:latest
+            elenarughi2/nodeapp:latest
           push: true
