--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
     nodeapp:
-        image: matteocastellucci3/nodeapp:latest
+        image: SDproject/nodeapp:latest
         container_name: nodeapp
         hostname: nodeapp
         ports: 
@@ -14,7 +14,7 @@ services:
             - mongodb2
             - mongodb3
     mongodb1:
-        image: matteocastellucci3/mongodb:latest
+        image: SDproject/mongodb:latest
         container_name: mongodb1
         hostname: mongodb1
         command: [ "--replSet", "rs", "--bind_ip_all" ]
@@ -25,14 +25,14 @@ services:
         networks:
             - nodeapp_network
     mongodb2:
-        image: matteocastellucci3/mongodb:latest
+        image: SDproject/mongodb:latest
         container_name: mongodb2
         hostname: mongodb2
         command: ["--replSet", "rs", "--bind_ip_all"]
         networks:
             - nodeapp_network
     mongodb3:
-        image: matteocastellucci3/mongodb:latest
+        image: SDproject/mongodb:latest
         container_name: mongodb3
         hostname: mongodb3
         command: ["--replSet", "rs", "--bind_ip_all"]
