Add nginx service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,38 @@
-version: "3.9"
-
 services:
-    nodeapp:
+    nginx:
+        image: SDproject/nginx:latest
+        container_name: nginx
+        hostname: nginx
+        ports:
+            - "9000:80"
+        networks:
+            - nodeapp_network
+        depends_on:
+            - nodeapp1
+            - nodeapp2
+    nodeapp1:
         image: SDproject/nodeapp:latest
-        container_name: nodeapp
+        container_name: nodeapp1
         hostname: nodeapp
-        ports: 
-            - "8080:8080"
+        command: ["nodejs", "index.js", "mongodb://mongodb1:27017,mongodb2:27017,mongodb3:27017/todo?replicaSet=rs&serverSelectionTimeoutMS=60000", "true"]
         networks: 
             - nodeapp_network
         depends_on:
             - mongodb1
             - mongodb2
             - mongodb3
+    nodeapp2:
+        image: SDproject/nodeapp:latest
+        container_name: nodeapp2
+        hostname: nodeapp
+        command: [ "nodejs", "index.js", "mongodb://mongodb1:27017,mongodb2:27017,mongodb3:27017/todo?replicaSet=rs&serverSelectionTimeoutMS=60000", "false" ]
+        networks:
+            - nodeapp_network
+        depends_on:
+            - mongodb1
+            - mongodb2
+            - mongodb3
+            - nodeapp1
     mongodb1:
         image: SDproject/mongodb:latest
         container_name: mongodb1
