Tune nginx ip-hashing for load balancing

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,9 @@ log_format  custom  'from:"$http_x_forwarded_for" - to:"$upstream_addr" - [$time
                    '$status $body_bytes_sent "$http_user_agent"';
 
 
+
 upstream loadbalancer {
-  ip_hash;
+  hash $http_x_forwarded_for;
   server nodeapp1:8080;
   server nodeapp2:8080;
 }
