Fix nginx ip hash

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ log_format  custom  'from:"$http_x_forwarded_for" - to:"$upstream_addr" - [$time
 
 
 upstream loadbalancer {
-  hash $http_x_forwarded_for;
+  hash $remote_addr$http_x_forwarded_for consistent;
   server nodeapp1:8080;
   server nodeapp2:8080;
 }
