Extend period of assumed server unavailability

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,8 @@ log_format  custom  'from:"$http_x_forwarded_for" - to:"$upstream_addr" - [$time
 
 upstream loadbalancer {
   hash $remote_addr$http_x_forwarded_for consistent;
-  server nodeapp1:8080;
-  server nodeapp2:8080;
+  server nodeapp1:8080 fail_timeout=600s;
+  server nodeapp2:8080 fail_timeout=600s;
 }
 
 server {
